--- a/Forma.html
+++ b/Forma.html
@@ -29,10 +29,10 @@
             <tr>
                 <td id="side-bar" style="width:145px" id="side-bar">
                     <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="News.html">Artikuj</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Artikuj.html">Artikuj</a></li>
                         
-                        <li><a href="AboutUs.html">Rreth Nesh</a></li>
+                        <li><a href="RrethNesh.html">Rreth Nesh</a></li>
                     </ul>
                 </td>
                 <td colspan="5">
