--- a/RrethNesh.html
+++ b/RrethNesh.html
@@ -29,9 +29,9 @@
             <tr>
                 <td id="side-bar" style="width:145px" id="side-bar">
                     <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="News.html">Artikuj</a></li>
-                        <li><a href="Work.html">Përfshihu</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="Artikuj.html">Artikuj</a></li>
+                        <li><a href="Forma.html">Përfshihu</a></li>
                         
                     </ul>
                 </td>
