--- a/Artikuj.html
+++ b/Artikuj.html
@@ -29,7 +29,7 @@
             <tr>
                 <td id="side-bar" style="width:145px" id="side-bar">
                     <ul>
-                        <li><a href="home.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="Work.html">Përfshihu</a></li>
                         <li><a href="AboutUs.html">About Us</a></li>
                     </ul>
