--- a/Artikuj.html
+++ b/Artikuj.html
@@ -30,8 +30,8 @@
                 <td id="side-bar" style="width:145px" id="side-bar">
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="Work.html">Përfshihu</a></li>
-                        <li><a href="AboutUs.html">About Us</a></li>
+                        <li><a href="Forma.html">Përfshihu</a></li>
+                        <li><a href="RrethNesh.html">About Us</a></li>
                     </ul>
                 </td>
                 <td id="Articles_Title"; colspan="5">
